added manychat script

--- a/index.html
+++ b/index.html
@@ -34,5 +34,8 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <!-- Manychat -->
+    <script src="//widget.manychat.com/2249187_82389.js" defer="defer"></script>
+    <script src="https://mccdn.me/assets/js/widget.js" defer="defer"></script>
   </body>
 </html>
